# termhelp

./: .gitignore  README.md  pyproject.toml
src/termhelp/: __init__.py  cli.py
src/termhelp/core/: __init__.py  orchestrator.py
src/termhelp/safety/: __init__.py  classify.py  rules.py
tests/: test_debug_cli.py  test_explain_cli.py  test_safety.py  test_smoke.py
